# ygg-voicerouter

./: .gitignore  Cargo.toml  INSTALL.md  INSTALL_zh.md  LICENSE  README.md  README_zh.md  config.default.toml
defaults/: config.toml
docs/: benchmark.md
docs/plans/: 2026-03-20-voicerouter-rust-rewrite.md  TODO.md
docs/superpowers/plans/: 2026-03-23-voice-interaction-framework.md  2026-03-24-audio-source-broadcast.md  2026-03-24-continuous-listening.md  2026-03-25-conversation-mode.md  2026-04-15-lazy-audio-source.md
scripts/: install.sh
src/: actor.rs  audio_source.rs  config.rs  core_actor.rs  ipc.rs  lib.rs  main.rs  overlay.rs  service.rs  setup.rs  sound.rs
src/asr/: cloud.rs  engine.rs  mod.rs  models.rs
src/audio/: denoise.rs  mod.rs  recorder.rs
src/continuous/: intent.rs  mod.rs  speaker.rs  vad.rs
src/conversation/: mod.rs  sentence.rs  session.rs
src/hotkey/: evdev.rs  mod.rs
src/inject/: linux.rs  mod.rs
src/llm/: client.rs  mod.rs
src/pipeline/: dag.rs  handler.rs  mod.rs  stage.rs
src/pipeline/handlers/: http.rs  inject.rs  mod.rs  pipe.rs  (+3 more)
src/postprocess/: english_fix.rs  filler.rs  mod.rs  normalize.rs  number.rs  punctuation.rs
src/router/: handler.rs  mod.rs
src/tts/: mod.rs  sherpa.rs
src/vad/: mod.rs
src/wakeword/: detector.rs  mod.rs
tests/: config_test.rs  conversation_integration.rs  core_actor_test.rs  handler_risk_test.rs  hotkey_test.rs  intent_test.rs  llm_test.rs  postprocess_test.rs  router_test.rs  speaker_test.rs  vad_test.rs
voicerouter-overlay/: Cargo.toml
voicerouter-overlay/src/: controller.rs  main.rs  protocol.rs  waveform.rs  window.rs
(+8 files in other folders)
