[package]
name = "voicerouter"
version = "0.1.0"
edition = "2021"
description = "Voice router for Linux — offline ASR with pluggable handlers"
license = "MIT"

[dependencies]
sherpa-onnx = { version = "1.12", features = ["shared"], default-features = false }
cpal = "0.15"
evdev = "0.12"
nnnoiseless = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
libc = "0.2"
ctrlc = "3"
crossbeam = "0.8"
serde_json = "1"
ureq = { version = "2", default-features = false }
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
