[package]
name = "voicerouter-overlay"
version = "0.1.0"
edition = "2021"
description = "Visual overlay for voicerouter recording state"

[[bin]]
name = "voicerouter-overlay"
path = "src/main.rs"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
